[package]
name = "is_wine"
version = "0.1.2"
edition = "2021"
authors = ["Domenico Mancini"]
repository = "https://github.com/dSyncro/is_wine"
license = "MIT"
keywords = [
    "wine",
    "windows",
    "linux",
    "detect",
    "detection",
]
categories = ["no-std"]
description = "A library to easily check if the current app is running under wine."

[dependencies.windows]
version = "0.59"
features = ["Win32_System_LibraryLoader"]
